--- a/about.html
+++ b/about.html
@@ -12,15 +12,12 @@
 	<body>
 		<div class="container">
 			
-				<div class="jumbotron backabout">
-				  <div class="container">
-				    <h1>Hello, world!</h1>
-				    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-				    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				    <p><a class="btn btn-primary btn-lg">Learn more</a></p>
-				  </div>
-				</div>
+		<div class="jumbotron backabout">
+		  <div class="container">
+		    <h3>About the artist:</h3>
+		    <p>Gagandeep Singh was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught  and is completing his Bachelor of Arts degree  at Cal State University Northridge specializing in contemporary figure and landscape painting. Singh's portraits- both in oil and watercolor- exemplify his creative talent in all media. His work includes realistic oil paintings with influences from artist such as Sargent, Zorn, Sorolla and Repin. He is  building up his portfolio for graduate school and this is an exciting time for the artist and for his collectors in what promises to be a brilliant future for this fresh California artist. </p>
+		  </div>
+		</div>
 				
 		</div>
 		<div class="container">
@@ -35,7 +32,7 @@
 			</nav>
 
 		    <div class="container">
-			    <p>Gagandeep Singh</br>
+			    <p id="name">Gagandeep Singh</br>
 				California State University Northridge</br>
 				Illustrator </p>
 			</div>
