--- a/art.html
+++ b/art.html
@@ -33,7 +33,7 @@
 			</nav>
 
 		    <div class="container">
-			    <p>Gagandeep Singh</br>
+			    <p id="name">Gagandeep Singh</br>
 				California State University Northridge</br>
 				Illustrator </p>
 			</div>
