--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		</div>
 
     <div class="container">
-    <p>Gagandeep Singh</br>
+    <p id="name">Gagandeep Singh</br>
 California State University Northridge</br>
 Illustrator </p>
 </div>
