--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 				  <div class="container">
 				    <h3>Contact Gagan</h3>
 				    <p style="color:black;">Email: singh.enso@gmail.com</p>
-				    <p>Instagram: <a href="http://instagram.com/singh_gallery" style="color:black;">Instagram.com/singh_gallery</a></p>
+				    <p>Instagram: <a href="http://instagram.com/singh_artist" style="color:black;">Instagram.com/singh_artist</a></p>
 				  </div>
 				</div>
 				
