--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
                     <div class="span12">
                         <i class="icon-camera page-title-icon"></i>
                         <h2>Portfolio /</h2>
-                        <p>Here are some of Gagan's works</p>
+                        <p>Here are some of Singh's works</p>
                     </div>
                 </div>
             </div>
@@ -179,14 +179,13 @@
                             <p>Classmate study</p>
                         </div>
                     </li>
-
                     <li data-id="p-10" data-type="painting" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/full_size/blonde500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/blonde300.jpg" alt="">
+                            <a href="assets/img/portfolio/full_size/actress500.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/thumbs/actress300.jpg" alt="">
                             </a>
                             <h4>Painting</h4>
-                            <p>Blonde</p>
+                            <p>Actress</p>
                         </div>
                     </li>
                     <li data-id="p-11" data-type="sketches" class="span3">
@@ -281,39 +280,11 @@
                     </li>
                     <li data-id="p-21" data-type="painting" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/full_size/surreal650.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/surreal300.jpg" alt="">
-                            </a>
-                            <h4>Painting</h4>
-                            <p>Surreal</p>
-                        </div>
-                    </li>
-
-                    <li data-id="p-22" data-type="painting" class="span3">
-                        <div class="work">
                             <a href="assets/img/portfolio/full_size/tree_swallow500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/tree_swallow.jpg" alt="">
                             </a>
                             <h4>Painting</h4>
                             <p>Tree Swallow</p>
-                        </div>
-                    </li>
-                    <li data-id="p-23" data-type="painting" class="span3">
-                        <div class="work">
-                            <a href="assets/img/portfolio/full_size/viatnamese_temple500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/viatnamese_temple300.jpg" alt="">
-                            </a>
-                            <h4>Oil on Paper</h4>
-                            <p>Viatnamese Temple</p>
-                        </div>
-                    </li>
-                    <li data-id="p-24" data-type="painting" class="span3">
-                        <div class="work">
-                            <a href="assets/img/portfolio/full_size/actress500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/actress300.jpg" alt="">
-                            </a>
-                            <h4>Painting</h4>
-                            <p>Actress</p>
                         </div>
                     </li>
                 </ul>
@@ -326,13 +297,13 @@
                 <div class="row">
                     <div class="widget span9">
                         <h4>About the artist</h4>
-                        <p>Gagandeep Singh was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught and is completing his Bachelor of Arts degree at Cal State University Northridge specializing in contemporary figure and landscape painting. Singh's portraits- both in oil and watercolor- exemplify his creative talent in all media. His work includes realistic oil paintings with influences from artist such as Sargent, Zorn, Sorolla and Repin.</p>
+                        <p>Gagandeep Singh known as “Singh” was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught and is completing his Bachelor of Arts degree at Cal State University Northridge specializing in contemporary figurative painting. He appears to capture the very essence of his subjects quickly with skillful, loose brushwork...   </p>
                         <p><a href="/about.html">Read more...</a></p>
                     </div>
                     <div class="widget span3">
-                        <h4>Contact Us</h4>
+                        <h4>Contact Singh</h4>
                         <p><i class="icon-map-marker"></i> Los Angeles, California, US</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <mailto="singhenzo@gmail.com">singhenzo@gmail.com</a></p>
+                        <p><i class="icon-envelope-alt"></i> Email: <mailto="singhenzo@gmail.com">singh.enzo@gmail.com</a></p>
                         <p><i class="icon-camera-retro"></i> Instagram: <a href="http://instagram.com/singh_gallery">instagram.com/singh_gallery</a></p>
 
                     </div>
