--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                     <div class="span12">
                         <i class="icon-user page-title-icon"></i>
                         <h2>About the Artist /</h2>
-                        <p>Below you can find more information about Gagan</p>
+                        <p>Below you can find more information about Singh</p>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
         <div class="about-us container">
             <div class="row">
                 <div class="about-us-text span12">
-                    <p>Gagandeep Singh was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught and is completing his Bachelor of Arts degree at Cal State University Northridge specializing in contemporary figure and landscape painting. Singh's portraits- both in oil and watercolor- exemplify his creative talent in all media. His work includes realistic oil paintings with influences from artist such as Sargent, Zorn, Sorolla and Repin. He is building up his portfolio for graduate school and this is an exciting time for the artist and for his collectors in what promises to be a brilliant future for this fresh California artist.</p>
+                    <p>Gagandeep Singh known as “Singh” was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught and is completing his Bachelor of Arts degree at Cal State University Northridge specializing in contemporary figurative painting. He appears to capture the very essence of his subjects quickly with skillful, loose brushwork...  His work includes realistic portrait oil paintings with influences from the masters such as Velazquez, Rembrandt, Degas, Repin and Sargent. He is building up his portfolio for graduate school and this is an exciting time for the artist and for his collectors in what promises to be a brilliant future for this fresh California artist. </p>
                 </div>
             </div>
         </div>
@@ -98,13 +98,13 @@
                 <div class="row">
                     <div class="widget span9">
                         <h4>About the artist</h4>
-                        <p>Gagandeep Singh was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught and is completing his Bachelor of Arts degree at Cal State University Northridge specializing in contemporary figure and landscape painting. Singh's portraits- both in oil and watercolor- exemplify his creative talent in all media. His work includes realistic oil paintings with influences from artist such as Sargent, Zorn, Sorolla and Repin.</p>
+                        <p>Gagandeep Singh known as “Singh” was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught and is completing his Bachelor of Arts degree at Cal State University Northridge specializing in contemporary figurative painting. He appears to capture the very essence of his subjects quickly with skillful, loose brushwork...   </p>
                         <p><a href="/about.html">Read more...</a></p>
                     </div>
                     <div class="widget span3">
-                        <h4>Contact Us</h4>
+                        <h4>Contact Singh</h4>
                         <p><i class="icon-map-marker"></i> Los Angeles, California, US</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <mailto="singhenzo@gmail.com">singhenzo@gmail.com</a></p>
+                        <p><i class="icon-envelope-alt"></i> Email: <mailto="singhenzo@gmail.com">singh.enzo@gmail.com</a></p>
                         <p><i class="icon-camera-retro"></i> Instagram: <a href="http://instagram.com/singh_gallery">instagram.com/singh_gallery</a></p>
 
                     </div>
