--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- Latest Work -->
         <div class="portfolio portfolio-page container">
             <div class="portfolio-title">
-                <h3>Gagan's Latest Works</h3>
+                <h3>Singh's Latest Works</h3>
             </div>
             <div class="row">
                 <div class="work span3">
@@ -156,13 +156,13 @@
                 <div class="row">
                     <div class="widget span9">
                         <h4>About the artist</h4>
-                        <p>Gagandeep Singh was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught and is completing his Bachelor of Arts degree at Cal State University Northridge specializing in contemporary figure and landscape painting. Singh's portraits- both in oil and watercolor- exemplify his creative talent in all media. His work includes realistic oil paintings with influences from artist such as Sargent, Zorn, Sorolla and Repin.</p>
+                        <p>Gagandeep Singh known as “Singh” was born in Punjab, India in 1992 and has lived in Los Angeles his whole life. Singh is largely self-taught and is completing his Bachelor of Arts degree at Cal State University Northridge specializing in contemporary figurative painting. He appears to capture the very essence of his subjects quickly with skillful, loose brushwork...   </p>
                         <p><a href="/about.html">Read more...</a></p>
                     </div>
                     <div class="widget span3">
-                        <h4>Contact Us</h4>
+                        <h4>Contact Singh</h4>
                         <p><i class="icon-map-marker"></i> Los Angeles, California, US</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <mailto="singhenzo@gmail.com">singhenzo@gmail.com</a></p>
+                        <p><i class="icon-envelope-alt"></i> Email: <mailto="singhenzo@gmail.com">singh.enzo@gmail.com</a></p>
                         <p><i class="icon-camera-retro"></i> Instagram: <a href="http://instagram.com/singh_gallery">instagram.com/singh_gallery</a></p>
 
                     </div>
