--- a/portfolio.html
+++ b/portfolio.html
@@ -49,12 +49,12 @@
                                 <span class="icon-bar"></span>
                             </a>
                             <h1>
-                                <a class="brand" href="index.html">Singh Gallery - Gagandeep Singh</a>
+                                <a class="brand" href="/">Singh Gallery - Gagandeep Singh</a>
                             </h1>
                             <div class="nav-collapse collapse">
                                 <ul class="nav pull-right">
                                     <li>
-                                        <a href="index.html"><i class="icon-home"></i><br />Home</a>
+                                        <a href="/"><i class="icon-home"></i><br />Home</a>
                                     </li>
                                     <li class="current-page">
                                         <a href="portfolio.html"><i class="icon-camera"></i><br />Portfolio</a>
