--- a/portfolio.html
+++ b/portfolio.html
@@ -91,8 +91,9 @@
                         <a class="all" id="active-imgs" href="#">All</a> /
                         <a class="charcoal" id="" href="#">Charcoal</a> /
                         <a class="graphite" id="" href="#">Graphite</a> /
-                        <a class="painting" id="" href="#">Painting</a> /
-                        <a class="sketches" id="" href="#">Sketches</a>
+                        <a class="oil" id="" href="#">Oil Painting</a> /
+                        <a class="sketches" id="" href="#">Sketches</a> /
+                        <a class="watercolor" id="" href="#">Watercolor Paintings</a>
                     </h4>
                 </div>
             </div>
@@ -107,7 +108,7 @@
                             <p>Figure study</p>
                         </div>
                     </li>
-                    <li data-id="p-2" data-type="painting" class="span3">
+                    <li data-id="p-2" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/dark-hair-555.jpg" rel="prettyPhoto" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/dark-hair-300.jpg" rel="prettyPhoto" alt="">
@@ -170,7 +171,7 @@
                             <p>Plaster Study Torso</p>
                         </div>
                     </li>
-                    <li data-id="p-9" data-type="painting" class="span3">
+                    <li data-id="p-9" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/classmate_study500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/classmate_study.jpg" alt="">
@@ -179,16 +180,7 @@
                             <p>Classmate study</p>
                         </div>
                     </li>
-                    <li data-id="p-10" data-type="painting" class="span3">
-                        <div class="work">
-                            <a href="assets/img/portfolio/full_size/actress500.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/thumbs/actress300.jpg" alt="">
-                            </a>
-                            <h4>Painting</h4>
-                            <p>Actress</p>
-                        </div>
-                    </li>
-                    <li data-id="p-11" data-type="sketches" class="span3">
+                    <li data-id="p-10" data-type="sketches" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/bobmarley500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/bobmarley300.jpg" alt="">
@@ -197,7 +189,7 @@
                             <p>Bob Marley</p>
                         </div>
                     </li>
-                    <li data-id="p-12" data-type="sketches" class="span3">
+                    <li data-id="p-11" data-type="sketches" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/budda550.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/budda300.jpg" alt="">
@@ -206,7 +198,7 @@
                             <p>Budda</p>
                         </div>
                     </li>
-                    <li data-id="p-13" data-type="painting" class="span3">
+                    <li data-id="p-12" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/butterfly.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/butterfly300.jpg" alt="">
@@ -215,7 +207,7 @@
                             <p>Butterfly</p>
                         </div>
                     </li>
-                    <li data-id="p-14" data-type="painting" class="span3">
+                    <li data-id="p-13" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/comission470.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/commision300.jpg" alt="">
@@ -224,7 +216,7 @@
                             <p>Commissioned work</p>
                         </div>
                     </li>
-                    <li data-id="p-15" data-type="painting" class="span3">
+                    <li data-id="p-14" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/bleedingheart.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/bleedingheart-300.jpg" alt="">
@@ -233,7 +225,7 @@
                             <p>Bleeding Hearth</p>
                         </div>
                     </li>
-                    <li data-id="p-16" data-type="sketches" class="span3">
+                    <li data-id="p-15" data-type="sketches" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/hamsa500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/hamsa300.jpg" alt="">
@@ -242,7 +234,7 @@
                             <p>Hamsa</p>
                         </div>
                     </li>
-                    <li data-id="p-17" data-type="painting" class="span3">
+                    <li data-id="p-16" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/hummingbird500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/hummingbird300.jpg" alt="">
@@ -251,7 +243,7 @@
                             <p>Humming Bird</p>
                         </div>
                     </li>
-                    <li data-id="p-18" data-type="painting" class="span3">
+                    <li data-id="p-17" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/impressionistwomen800.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/impressionistwomen300.jpg" alt="">
@@ -260,7 +252,7 @@
                             <p>Impressionist Women</p>
                         </div>
                     </li>
-                    <li data-id="p-19" data-type="sketches" class="span3">
+                    <li data-id="p-18" data-type="sketches" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/jennifer_lawrance500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/jennifer_lawrance.jpg" alt="">
@@ -269,7 +261,7 @@
                             <p>Jennifer Lawrance</p>
                         </div>
                     </li>
-                    <li data-id="p-20" data-type="painting" class="span3">
+                    <li data-id="p-19" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/landscape500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/landscape300.jpg" alt="">
@@ -278,7 +270,7 @@
                             <p>Landscape</p>
                         </div>
                     </li>
-                    <li data-id="p-21" data-type="painting" class="span3">
+                    <li data-id="p-20" data-type="watercolor" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/tree_swallow500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/tree_swallow.jpg" alt="">
