minor color changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,17 +89,16 @@
                 <div class="portfolio-navigator span12">
                     <h4 class="filter-portfolio">
                         <a class="all" id="active-imgs" href="#">All</a> /
-                        <a class="charcoal" id="" href="#">Charcoal</a> /
-                        <a class="graphite" id="" href="#">Graphite</a> /
-                        <a class="oil" id="" href="#">Oil Painting</a> /
-                        <a class="sketches" id="" href="#">Sketches</a> /
-                        <a class="watercolor" id="" href="#">Watercolor Paintings</a>
+                        <a class="drawing" id="" href="#">Drawings</a> /
+                        <a class="oil" id="" href="#">Oil Paintings</a> /
+                        <a class="watercolor" id="" href="#">Watercolor Paintings</a> /
+                        <a class="sketches" id="" href="#">Sketches</a>
                     </h4>
                 </div>
             </div>
             <div class="row">
                 <ul class="portfolio-img">
-                    <li data-id="p-1" data-type="painting" class="span3">
+                    <li data-id="p-1" data-type="oil" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/nude_figure_study_oil_on_paper.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/nude_figure_study_oil_on_paper300.png" alt="">
@@ -117,7 +116,7 @@
                             <p>Female Portrait</p>
                         </div>
                     </li>
-                    <li data-id="p-3" data-type="graphite" class="span3">
+                    <li data-id="p-3" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/female_head500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/female_head300.jpg" alt="">
@@ -126,7 +125,7 @@
                             <p>Plaster study Female head</p>
                         </div>
                     </li>
-                    <li data-id="p-4" data-type="graphite" class="span3">
+                    <li data-id="p-4" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/medusa_study_500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/medusa_study_300.jpg" alt="">
@@ -135,7 +134,7 @@
                             <p>Medusa Study</p>
                         </div>
                     </li>
-                    <li data-id="p-5" data-type="graphite" class="span3">
+                    <li data-id="p-5" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/with_a_wimper.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/with_a_wimper_300.jpg" alt="">
@@ -144,7 +143,7 @@
                             <p>With a wimper</p>
                         </div>
                     </li>
-                    <li data-id="p-6" data-type="charcoal" class="span3">
+                    <li data-id="p-6" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/grandfather500.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/grandfather.jpg" alt="">
@@ -153,7 +152,7 @@
                             <p>Artist's GrandFather</p>
                         </div>
                     </li>
-                    <li data-id="p-7" data-type="graphite" class="span3">
+                    <li data-id="p-7" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/male_head400.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/male_head.jpg" alt="">
@@ -162,7 +161,7 @@
                             <p>Plaster study Male Head</p>
                         </div>
                     </li>
-                    <li data-id="p-8" data-type="graphite" class="span3">
+                    <li data-id="p-8" data-type="drawing" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/full_size/torso450.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/thumbs/torso300.jpg" alt="">
@@ -295,9 +294,8 @@
                     <div class="widget span3">
                         <h4>Contact Singh</h4>
                         <p><i class="icon-map-marker"></i> Los Angeles, California, US</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <mailto="singhenzo@gmail.com">singh.enzo@gmail.com</a></p>
+                        <p><i class="icon-envelope-alt"></i>Email: <a href="mailto:singh.enso@gmail.com">singh.enso@gmail.com</a></p>
                         <p><i class="icon-camera-retro"></i> Instagram: <a href="http://instagram.com/singh_gallery">instagram.com/singh_gallery</a></p>
-
                     </div>
                 </div>
                 <div class="footer-border"></div>
