--- a/about.html
+++ b/about.html
@@ -104,9 +104,8 @@
                     <div class="widget span3">
                         <h4>Contact Singh</h4>
                         <p><i class="icon-map-marker"></i> Los Angeles, California, US</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <mailto="singhenzo@gmail.com">singh.enzo@gmail.com</a></p>
+                        <p><i class="icon-envelope-alt"></i>Email: <a href="mailto:singh.enso@gmail.com">singh.enso@gmail.com</a></p>
                         <p><i class="icon-camera-retro"></i> Instagram: <a href="http://instagram.com/singh_gallery">instagram.com/singh_gallery</a></p>
-
                     </div>
                 </div>
                 <div class="footer-border"></div>
